<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Login.verifyActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:orientation="vertical">
        <TextView
            android:textColor="@color/Black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finishRegistration"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:textColor="@color/Grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/verifyRequest"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_sent"
                android:gravity="left"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/resend"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend"
                android:layout_gravity="center"
                android:background="@drawable/custom_accent_color_button"
                android:textColor="@color/White"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verified"
                android:gravity="start"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reload"
                android:layout_gravity="center"
                android:background="@drawable/custom_accent_color_button"
                android:textColor="@color/White" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wrong_email"
                android:gravity="start"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/logoutAndDelete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/relogin"
                android:layout_gravity="center"
                android:background="@drawable/custom_accent_color_button"
                android:textColor="@color/White"/>
        </LinearLayout>
</RelativeLayout>