<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.recoverPasswordActivity"
    android:padding="10dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recoverPasswordHint"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/Black"/>
    <EditText
        android:id="@+id/recovery_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:maxLength="40"/>

    <Button
        android:background="@drawable/custom_accent_color_button"
        android:textColor="@color/White"
        android:id="@+id/recovery_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/OK"/>
</LinearLayout>